--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:Jct+WNw+mQuwX0SPYH6maRmhDP1I3vSBwKCOkWkZ4Fo=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://13.58.67.166/
+APP_URL=http://localhost:99
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -31,3 +31,15 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+FACEBOOK_ID=190941314674785
+FACEBOOK_SECRET=9e49b6582e0e8c519c09123a1b4d241a
+
+GOOGLE_ID=1087228681463-deul6fd11o0e58b57anut5m1lge2pjqo.apps.googleusercontent.com
+GOOGLE_SECRET=nWQEGnN_WLH4nk-8a046vckv
+
+LINKEDIN_ID=81nvimy97embmg
+LINKEDIN_SECRET=Hk2I2o5TDY7KPQ3b
+
+TWITTER_ID=1NAIPmA3wVq17fn64LlvYWGnq
+TWITTER_SECRET=neWYKXMXA3hF1BLxj8ba5cK1OO0TFsDHanwIlzvVCeuH7OCkZn
